# my-website-2

./: .deepsource.toml  .eslintrc.js  .firebaserc  .gcloudignore  .gitignore  .prettierignore  .prettierrc  README.md  app.yaml  cloudbuild.yaml  firebase.json  nuxt.config.ts  package.json  tsconfig.json  vercel.json
.github/: FUNDING.yml  dependabot.yml
.github/config/: branch_protect_main.yml  branch_unlock_main.yml
.github/labeler/: deepsource.yml
.github/workflows/: ci.yml  codeql-analysis.yml  covid19-update.yml  covid19_update.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  i18n-generator.yml  image-compress.yml  lint-check.yml  pr-labeler.yml
app/: router.scrollBehavior.ts
assets/: ibaraki-municipalities.json  status-code.json
components/: TableOfContents.vue  TwitterEmbed.vue  WebpImage.vue  breadcrumb.vue  external-link.vue  icon-with-text.vue  scroll-next-animation.vue  simpleicon-container.vue  table-of-contents.vue  twitter-embed.vue  webp-image.vue
config/: main.ts
data/: apps.json  opendata_covid19_ibaraki.json
layouts/: default.vue  error.vue
locales/: en.json  generator.py  ja.json
middleware/: blog-redirect-temp.ts  snakecase-redirect.ts  trailingslash-redirect.ts
pages/: about.vue  disclaimer.vue  index.vue  sitemap.vue  uconst.vue
plugins/: vue-i18n.ts
server-middleware/: log.ts
server/opendata_wasm/: Cargo.toml
server/opendata_wasm/src/: functions.rs  lib.rs
static/: robots.txt  sitemap.xml  twttr-load.js
store/: index.ts
types/: json-object.ts
utils/: date-format.ts  hash.ts
(+174 files in other folders)
